# MathGoldTest

./: AGENTS.md  AGENTS_repo.md  Kaggle_MathGold_Handover.md  LICENSE  MathGoldFormalization.lean  MathGold_Whitepaper.md  README.md  Snakey_Hackathon_Handover.md  Testing_Phase_Handover.md  Vibe_Mode_Handover.md  lake-manifest.json  lakefile.toml  upload_to_drive.py
MathGoldFormalization/: GeometricWaste.lean  RandomOracle.lean  Scratch.lean  VT_Codes.lean
agy-cli-projects/: app.py  news.txt  summary.txt
baby-bitcoin-demo/: HANDOVER.md  app.js  index.html  style.css
expense-reviewer/: Makefile  README.md  agents-cli-manifest.yaml  pyproject.toml
expense-reviewer/app/: agent.py  fast_api_app.py
expense-reviewer/app/app_utils/: telemetry.py  typing.py
expense-reviewer/artifacts/grade_results/: results_20260623_214616.html  results_20260623_214616.json  results_20260623_214704.html  results_20260623_214704.json  results_20260623_214856.html  results_20260623_214856.json
expense-reviewer/artifacts/traces/: generated_traces.json
expense-reviewer/deployment/terraform/single-project/: variables.tf
expense-reviewer/deployment/terraform/single-project/vars/: env.tfvars
expense-reviewer/tests/eval/: eval_config.yaml  generate_traces.py  grade.py
expense-reviewer/tests/eval/datasets/: basic-dataset.json
snakey copy/: snakey.html  snakey.spec.ts  snakey.ts
snakey-api/: cleanup_db.py  database.py  main.py  requirements.txt  sandbox.py  tournament.db  tournament_runner.py
snakey-ui/: README.md  angular.json  package-lock.json  package.json  scratch.js  (+1 more)
(+17 files in other folders)
