[project]
name = "expense-reviewer"
version = "0.1.0"
description = "Expense reviewer with security checkpoint"
dependencies = [
    "google-adk[gcp]>=2.0.0,<3.0.0",
    "fastapi>=0.110.0",
    "uvicorn>=0.28.0",
    "gcsfs>=2024.11.0",
    "google-cloud-aiplatform[agent-engines,evaluation]>=1.156.0",
    "google-cloud-logging>=3.12.0,<4.0.0",
    "opentelemetry-instrumentation-google-genai>=0.1.0,<1.0.0",
    "protobuf>=6.31.1,<7.0.0",
]
requires-python = ">=3.11,<3.14"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
